--- a/themes/x/static/css/main.css
+++ b/themes/x/static/css/main.css
@@ -29,7 +29,21 @@ p, pre, ul, ol, dl, table, blockquote {
     color: #6a9fb5;
     padding: 5px 100px;
     border-bottom:1px solid #eee;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    font-weight: 800;
+}
+
+#banner .site-title {
+    margin: 0;
+    font-size: 3em;
+    font-weight: 500;
+}
+
+#banner .site-subtitle {
+    margin-left: 15px;
+    font-size: 1.5em;
+    color: #ccc;
 }
 
 #banner a:visited {
@@ -47,6 +61,10 @@ p, pre, ul, ol, dl, table, blockquote {
 }
 
 .post-date{
+    color: #9a9a9a;
+}
+
+.entry-info {
     color: #9a9a9a;
 }
 
