--- a/themes/x/templates/article.html
+++ b/themes/x/templates/article.html
@@ -24,6 +24,9 @@
   <div class="entry-content">
     {{ article.content }}
   </div><!-- /.entry-content -->
+  <div class="entry-info">
+    <p> {% if article.tags %}Tags: {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag | escape }}</a> {% endfor %}{% endif %} </p>
+  </div>
     {% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
     <div class="comments">
       <h2>Comments</h2>
