add favicon ico

--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -30,6 +30,7 @@
         {% endif %}
         {% endblock head %}
         <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/{{ CSS_FILE }}" type="text/css" charset="utf-8">
+        <link rel="icon" type="image/png" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/favicon.ico">
 </head>
 
 <body id="index" class="home">
