--- a/themes/x/templates/article.html
+++ b/themes/x/templates/article.html
@@ -17,6 +17,8 @@
 {% endblock %}
 
 {% block content %}
+<div class="row">
+  <div class="col-md-12 col-xs-12">
 <section id="content" class="body">
   <header>
     <h2 class="entry-title">{{ article.title }}</h2>
@@ -46,4 +48,6 @@
     </div>
     {% endif %}
 </section>
+</div>
+</div>
 {% endblock %}
