--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -2,22 +2,62 @@
 <html lang="{{ DEFAULT_LANG }}">
 <head>
         {% block head %}
-        <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
+        <title>{% block title %}{{ page_name }}{% endblock %} - {{ SITENAME }}</title>
         <meta charset="utf-8" />
         {% endblock head %}
         <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/bootstrap.css" type="text/css" charset="utf-8">
         <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/pygment.css" type="text/css" charset="utf-8">
         <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/{{ CSS_FILE }}" type="text/css" charset="utf-8">
+        <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR}}/js/jquery-1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR}}/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR}}/js/xcodest.js" type="text/javascript" charset="utf-8"></script>
         <link rel="icon" type="image/png" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/favicon.ico">
 </head>
 
-<body id="index" class="home">
+<body>
     <div class="container">
-        <header id="banner" class="body">
-                <span class='site-title'><a href="{{ SITEURL }}/">{{ SITENAME }}</a></span><span class="site-subtitle">{{ SITESUBTITLE }}</span>
-        </header>
-        {% block content %}
-        {% endblock %}
+      <div class="row">
+        <div class="col-md-12 col-xs-12">
+          <div class="navbar navbar-default">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target="#sidebar">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ SITEURL }}">
+                  {{ SITENAME }}
+                </a>
+              </div>
+              <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                  {% for page in pages %}
+                  <li><a href="#">{{ page }}</a></li>
+                  {% endfor %}
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3 col-xs-12 hidden-xs" id="sidebar">
+          <div class="panel panel-default">
+            <div class="panel-heading">Categories</div>
+            <div class="panel-body">
+              <ul class="nav nav-pills nav-stacked">
+                {% for cate, arti in categories %}
+                <li{% if cate==category %} class="active"{% endif %}><a href="{{ SITEURL }}/category/{{ cate|lower }}.html">{{ cate }}</a></li>
+                {% endfor %}
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-9 col-xs-12">
+        {% block content %} {% endblock %}
+        </div>
+      </div>
 {% include "analytics.html" %}
     </div>
 </body>
