change the bootstrap grid-float-breakpoint

--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3 col-xs-12 hidden-xs" id="sidebar">
+        <div class="col-md-3 col-xs-12 hidden-xs hidden-sm" id="sidebar">
           <div class="panel panel-default">
             <div class="panel-heading">Categories</div>
             <div class="panel-body">
