--- a/themes/x/templates/article.html
+++ b/themes/x/templates/article.html
@@ -19,7 +19,7 @@
 {% block content %}
 <div class="row">
   <div class="col-md-12 col-xs-12">
-<section id="content" class="body">
+  <section id="content" class="body">
   <header>
     <h2 class="entry-title">{{ article.title }}</h2>
     <span class="post-date"> {{ article.locale_date }} </span>
@@ -27,6 +27,14 @@
   <div class="entry-content">
     {{ article.content }}
   </div><!-- /.entry-content -->
+  <div>
+    <nav>
+      <ul class="pager">
+        <li class="previous{% if not article.prev_article %} disabled{% endif %}"><a href="{{ article.prev_article.url|default("#") }}">&larr; Older</a></li>
+        <li class="next{% if not article.next_article %} disabled{% endif %}"><a href="{{ article.next_article.url|default("#") }}">Newer &rarr;</a></li>
+      </ul>
+    </nav>
+  </div>
   <div class="entry-info">
     <p> {% if article.tags %}Tags: {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag | escape }}</a> {% endfor %}{% endif %} </p>
   </div>
