--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="container-flow">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-10 col-md-offset-1 col-xs-12">
           <div class="navbar navbar-default">
@@ -35,7 +35,7 @@
               <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                   {% for name, link in MENUITEMS %}
-                  <li><a href="{{ link }}">{{ name }}</a></li>
+                  <li{% if page_name == name|lower%} class="active"{% endif %}><a href="{{ link }}">{{ name }}</a></li>
                   {% endfor %}
                   {% for page in pages %}
                   <li><a href="#">{{ page }}</a></li>
