--- a/themes/x/templates/pagination.html
+++ b/themes/x/templates/pagination.html
@@ -1,4 +1,5 @@
 {% if DEFAULT_PAGINATION %}
+{% if articles_paginator.num_pages > 1 %}
 <div class="row">
   <div class="col-md-12 col-xs-12">
     <nav class="text-center">
@@ -19,4 +20,5 @@
     </nav>
   </div>
 </div>
+{% endif %}
 {% endif %}
