--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="{{ DEFAULT_LANG }}">
 <head>
         {% block head %}
-        <title>{% block title %}{{ page_name }}{% endblock %} - {{ SITENAME }}</title>
+        <title>{% block title %}{{ page_name|capitalize }}{% endblock %} - {{ SITENAME }}</title>
         <meta charset="utf-8" />
         {% endblock head %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
