--- a/themes/x/templates/tag.html
+++ b/themes/x/templates/tag.html
@@ -1,9 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="row">
-  <div class="col-md-offset-2 col-md-8 col-xs-12">
-    {% if category %} <h1>Category: {{ category }}</h1> {% endif %}
-    {% if tag %} <h1>Tag: {{ tag }}</h1> {% endif %}
+  <div class="col-md-12 col-xs-12">
+    <ol class="breadcrumb">
+      <li><a href="{{ SITEURL }}">Home</a></li>
+      {% if tag %}
+      <li><a href="{{ SITEURL }}/tags.html">Tag</a></li>
+      <li class="active">{{ tag }}</li>
+      {% elif page_name == "index" %}
+      <li class="active"> All Articles</li>
+      {% endif %}
+    </ol>
     <ul class="list-group">
     {% for article in articles_page.object_list %}
       <li class="list-group-item">
