--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -35,11 +35,13 @@
               <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                   {% for name, link in MENUITEMS %}
-                  <li{% if page_name == name|lower%} class="active"{% endif %}><a href="{{ link }}">{{ name }}</a></li>
+                  <li{% if page_name == name|lower %} class="active"{% endif %}><a href="{{ link }}">{{ name }}</a></li>
                   {% endfor %}
                   {% if DISPLAY_PAGES_ON_MENU %}
-                  {% for page in pages %}
-                  <li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title|capitalize }}</a></li>
+                  {% for p in pages %}
+                  <li{% if page is defined and p.title == page.title %} class="active"{% endif %}>
+                    <a href="{{ SITEURL }}/{{ p.url }}">{{ p.title|capitalize }}</a>
+                  </li>
                   {% endfor %}
                   {% endif %}
                 </ul>
