--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -92,8 +92,11 @@
         {% block content %} {% endblock %}
         </div>
       </div>
-{% include "analytics.html" %}
-{% include "_cnzz.html" %}
+      <div class="row">
+        <div class="col-md-10 col-md-offset-1 col-xs-12 text-center footer">
+        {% include "analytics.html" %}
+        {% include "_cnzz.html" %}
+        </div>
     </div>
 </body>
 </html>
