--- a/themes/x/templates/article.html
+++ b/themes/x/templates/article.html
@@ -30,6 +30,7 @@
     {% endif %}
     {{ article.content }}
   </div><!-- /.entry-content -->
+  {% if article.status == 'published' %}
   <div>
     <nav>
       <ul class="pager">
@@ -38,6 +39,7 @@
       </ul>
     </nav>
   </div>
+  {% endif %}
   <div class="entry-info">
     <p> {% if article.tags %}Tags: {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag | escape }}</a> {% endfor %}{% endif %} </p>
   </div>
