--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="{{ DEFAULT_LANG }}">
 <head>
-        {% block head %}
-        <title>{% block title %}{{ page_name|capitalize }}{% endblock %} - {{ SITENAME }}</title>
-        <meta charset="utf-8" />
-        {% endblock head %}
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/bootstrap.min.css" type="text/css" charset="utf-8">
-        <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/bootstrap-theme.min.css" type="text/css" charset="utf-8">
-        <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/pygment.css" type="text/css" charset="utf-8">
-        <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/{{ CSS_FILE }}" type="text/css" charset="utf-8">
-        <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR}}/js/jquery-1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR}}/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR}}/js/xcodest.js" type="text/javascript" charset="utf-8"></script>
-        <link rel="icon" type="image/png" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/favicon.ico">
+    {% block head %}
+    <title>{% block title %}{{ page_name|capitalize }}{% endblock %} - {{ SITENAME }}</title>
+    <meta charset="utf-8" />
+    {% endblock head %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/bootstrap.min.css" type="text/css" charset="utf-8">
+    <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/bootstrap-theme.min.css" type="text/css" charset="utf-8">
+    <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/pygment.css" type="text/css" charset="utf-8">
+    <link rel="stylesheet" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/css/{{ CSS_FILE }}" type="text/css" charset="utf-8">
+    <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR}}/js/jquery-1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR}}/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR}}/js/xcodest.js" type="text/javascript" charset="utf-8"></script>
+    <link rel="icon" type="image/png" href="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/img/favicon.ico">
+    {% if FEED_ALL_ATOM %}
+    <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
+    {% endif %}
+    {% if FEED_ALL_RSS %}
+    <link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
+    {% endif %}
 </head>
 
 <body>
