--- a/themes/x/static/css/main.css
+++ b/themes/x/static/css/main.css
@@ -90,3 +90,9 @@ h3 {
     padding: 2px 0px 0px 10px;
     margin-left: 16px;
 }
+
+.qrcode {
+    display: block;
+    width: 100%;
+    height: auto;
+}
