--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -70,6 +70,12 @@
       <div class="row">
         <div class="col-md-offset-1 col-md-2 col-xs-12 hidden-xs hidden-sm" id="sidebar">
           <div class="panel panel-default">
+            <div class="panel-heading">我的公众号</div>
+            <div class="list-group">
+               <img class="qrcode" src="{{ SITE_URL }}/images/qrcode.jpg"/>
+            </div>
+          </div>
+          <div class="panel panel-default">
             <div class="panel-heading">Categories</div>
             <div class="list-group">
               {% for cate, arti in categories %}
