--- a/themes/x/static/css/main.css
+++ b/themes/x/static/css/main.css
@@ -65,8 +65,15 @@ footer {
 .entry-content img {
     max-width: 100%; 
     height: auto;
+
+    border-radius: 10px;
+    border: 3px #e0dfcc;
+    border-style: solid;
+    padding: 3px;
+    margin: auto;
     display: block;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 pre {
