--- a/themes/x/static/css/main.css
+++ b/themes/x/static/css/main.css
@@ -77,7 +77,8 @@ footer {
 }
 
 pre {
-    overflow: visible;
+    overflow-y: hidden;
+    overflow-x: auto;
     white-space: pre;
     word-break: normal !important;
     word-wrap: normal !important;
