--- a/themes/x/templates/index.html
+++ b/themes/x/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}{{ super() }}{% endblock title %}
 {% block content %}
 <div class="row">
   <div class="col-md-12 col-xs-12">
