--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -72,7 +72,7 @@
           <div class="panel panel-default">
             <div class="panel-heading">我的公众号</div>
             <div class="list-group">
-               <img class="qrcode" src="{{ SITE_URL }}/images/qrcode.jpg"/>
+               <img class="qrcode" src="{{ SITEURL }}/images/qrcode.jpg"/>
             </div>
           </div>
           <div class="panel panel-default">
