--- a/themes/x/templates/article.html
+++ b/themes/x/templates/article.html
@@ -22,7 +22,17 @@
   <section id="content" class="body">
   <header>
     <h1 class="entry-title">{{ article.title }}</h1>
-    <span class="post-date"> {{ article.locale_date }} </span>
+    <div class="entry-info">
+      <span class="glyphicon glyphicon-list-alt"></span>
+      <span class="post-date"> {{ article.locale_date }} </span>
+      <!--
+      <a class="post-category label label-default" href="{{ SITEURL }}/category/{{ article.category|lower }}.html">{{ article.category }}</a>
+      -->
+      <span class="glyphicon glyphicon-tags"></span>
+      {% for tag in article.tags %}
+      <a class="post-tag label label-default" href="{{ SITEURL }}/tag/{{ tag|lower }}.html">{{ tag }}</a>
+      {% endfor %}
+    </div>
   </header>
   <div class="entry-content">
     {% if article.toc %}
@@ -33,7 +43,7 @@
       <p><span>本文标题:</span>{{ article.title }}</p>
       <p><span>文章作者:</span>{{ article.author|default('Jeffrey4l') }}</p> 
       <p><span>发布时间:</span>{{ article.locale_date }} </p>
-      <p><span>最后更新:</span>{{ article.locale_date }}</p>
+      <p><span>最后更新:</span>{% if article.modified %}{{ article.modified|strftime(DEFAULT_DATE_FORMAT) }} {% else %} {{ article.locale_date }} {% endif %}</p>
       <p><span>原始链接:</span><a href="http://xcodest.me/{{ article.url }}" target="_blank">http://xcodest.me/{{ article.url }} </a></p>
       <p> <span>许可协议:</span><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/cn/" target="_blank">"署名-非商用-相同方式共享 3.0"</a> 转载请保留原文链接及作者。</p>
     </div>
@@ -48,9 +58,6 @@
     </nav>
   </div>
   {% endif %}
-  <div class="entry-info">
-    <p> {% if article.tags %}Tags: {% for tag in article.tags %}<a href="{{ SITEURL }}/{{ tag.url }}">{{ tag | escape }}</a> {% endfor %}{% endif %} </p>
-  </div>
     {% if DISQUS_SITENAME and SITEURL and article.status != "draft" %}
     <div class="comments">
       <h2>Comments</h2>
