--- a/themes/x/templates/article.html
+++ b/themes/x/templates/article.html
@@ -5,15 +5,12 @@
   {% for keyword in article.keywords %}
     <meta name="keywords" contents="{{keyword}}" />
   {% endfor %}
-
   {% for description in article.description %}
     <meta name="description" contents="{{description}}" />
   {% endfor %}
-
   {% for tag in article.tags %}
     <meta name="tags" contents="{{tag}}" />
   {% endfor %}
-
 {% endblock %}
 
 {% block content %}
@@ -52,8 +49,16 @@
   <div>
     <nav>
       <ul class="pager">
-        <li class="previous{% if not article.prev_article %} disabled{% endif %}"><a href="{{ article.prev_article.url|default("#") }}">&larr; Older</a></li>
-        <li class="next{% if not article.next_article %} disabled{% endif %}"><a href="{{ article.next_article.url|default("#") }}">Newer &rarr;</a></li>
+        {% if article.prev_article %}
+        <li class="previous"><a href="{{ article.prev_article.url }}">&larr; Older</a></li>
+        {% else %}
+        <li class="previous disabled"><span href="{{ article.prev_article.url }}">&larr; Older</span></li>
+        {% endif %}
+        {% if article.next_article %}
+        <li class="next"><a href="{{ article.next_article.url }}">Newer &rarr;</a></li>
+        {% else %}
+        <li class="next disabled"><span href="{{ article.next_article.url }}">Newer &rarr;</span></li>
+        {% endif %}
       </ul>
     </nav>
   </div>
