--- a/themes/x/static/css/main.css
+++ b/themes/x/static/css/main.css
@@ -137,15 +137,14 @@ a.footnote-ref:after {
 
 .copyright {
   display: block;
-  border: 1px solid #ccc;
-  padding: 10px 10px 0 10px;
+  border-left: 4px solid #ddd;
+  padding: 0 15px;
   color: #8c8c8c;
-  margin: 0px 20px;
-  border-radius: .25em!important;
+  margin: 0px 0px;
 }
 
 .copyright p {
-  line-height: .7em;
+    margin: 0px;
 }
 .copyright span {
   font-weight: bold;
