--- a/themes/x/static/css/main.css
+++ b/themes/x/static/css/main.css
@@ -41,6 +41,7 @@ h1 {
 .entry-content {
     font-size: 15px;
     line-height: 1.8;
+    margin-top: 30px;
 }
 
 blockquote {
@@ -52,6 +53,10 @@ blockquote > :first-child {
 margin-top: 0; }
 blockquote > :last-child {
 margin-bottom: 0; }
+
+blockquote p {
+    margin: 0px;
+}
 
 footer {
     text-align: right;
