--- a/themes/x/static/css/main.css
+++ b/themes/x/static/css/main.css
@@ -1,6 +1,6 @@
 body {
     color: #666;
-    font-family: "微软雅黑", "Helvetica Neue", Tahoma, Helvetica, Arial, sans-serif;
+    font-family: "Microsoft Yahei", Arial;
 }
 h1 {
     font-size: 28px;
@@ -39,15 +39,15 @@ h1 {
 }
 
 .entry-content {
-    font-size: 15px;
+    font-size: 18px;
     line-height: 1.8;
     margin-top: 30px;
 }
 
 blockquote {
   border-left: 4px solid #dddddd;
-  padding: 0 15px;
-  font-size: 15px;
+  padding: 0 18px;
+  font-size: 18px;
   color: #777777; }
 blockquote > :first-child {
 margin-top: 0; }
@@ -87,13 +87,14 @@ footer {
 }
 
 pre {
+    font-family: Consolas,Monaco,andale mono,ubuntu mono,monospace;
     overflow-y: hidden;
     overflow-x: auto;
     white-space: pre;
     word-break: normal !important;
     word-wrap: normal !important;
     white-space: pre !important;
-    font-size: 14px;
+    font-size: 16px;
     /* NOTE(jeffrey4l): this prevent the y-scroll in chrome, no idea why ;(. */
     margin: 10px 1px;
 }
