--- a/themes/x/templates/base.html
+++ b/themes/x/templates/base.html
@@ -22,7 +22,7 @@
     {% endif %}
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#toc">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-10 col-md-offset-1 col-xs-12">
